# distronode

./: .cherry_picker.toml  .gitignore  .mailmap  README.md  setup.cfg
.azure-pipelines/: azure-pipelines.yml
.azure-pipelines/commands/: cloud.sh  entry-point.sh  generic.sh  linux.sh  remote.sh  sanity.sh  units.sh  windows.sh
.azure-pipelines/commands/incidental/: network.sh  windows.sh
.azure-pipelines/scripts/: aggregate-coverage.sh  combine-coverage.py  process-results.sh  publish-codecov.py  report-coverage.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: python-app.yml  python-publish.yml
changelogs/: config.yaml
changelogs/fragments/: 2.16.0_summary.yaml  2.16.0b1_summary.yaml  2.16.0b2_summary.yaml  2.16.0rc1_summary.yaml  2.16.1_summary.yaml  20802-until-default.yml  22396-indicate-which-args-are-multi.yml  27816-fetch-unreachable.yml  50603-tty-check.yaml  71916-user-expires-int.yml  73643-handlers-prevent-multiple-runs.yml  74723-support-wildcard-win_fetch.yml  75063-allow-dev-nul-as-skeleton-for-new-homedir.yml  76372-fix-pip-virtualenv-command-parsing.yml  78487-galaxy-collections-path-warnings.yml  79129-distronode-managed-filename-format.yaml  79364_replace.yml  79677-fix-argspec-type-check.yml  79734-distronode-test-change-detection.yml  79999-distronode-user-tweak-macos-defaults.yaml  80089-prevent-module-build-date-issue.yml  80128-symbolic-modes-X-use-computed.yml  80257-iptables-chain-creation-does-not-populate-a-rule.yml  80334-reduce-distronode-galaxy-api-calls.yml  80406-validate-modules-semantic-markup.yml  80459-handlers-nested-includes-vars.yml  80460-add-symbolic-links-with-dir.yml  80478-extend-mount-info.yml  80488-pip-pkg-resources.yml  80506-syntax-check-playbook-only.yml  80520-fix-current-hostname-openbsd.yml  80523_-_adding_short_option_for_--ask-vault-pass.yml  80561.yml  80605-template-overlay-native-jinja.yml  80648-fix-distronode-galaxy-cache-signatures-bug.yml  80721-distronode-galaxy.yml  80738-abs-unarachive-src.yml  80841-display-type-annotation.yml  80880-register-handlers-immediately-if-iterating-handlers.yml  80882-Amazon-os-family-compat.yaml  (+133 more)
hacking/: README.md  create-bulk-issues.py  deprecated_issue_template.md  distronode-profile  distronode-profile.py  env-setup  env-setup.fish  report.py  return_skeleton_generator.py  test-module.py  update-sanity-requirements.py
hacking/azp/: README.md  download.py  get_recent_coverage_runs.py  incidental.py  run.py
hacking/backport/: backport_of_line_adder.py
hacking/tests/: gen_distribution_version_testcase.py
hacking/ticket_stubs/: README.md  bug_internal_api.md  bug_wrong_repo.md  collections.md  guide_newbie_about_gh_and_contributing_to_distronode.md  no_thanks.md  pr_duplicate.md  pr_merged.md  proposal.md  question_not_bug.md  resolved.md  wider_discussion.md
lib/distronode/: context.py
lib/distronode/cli/: __init__.py  doc.py  galaxy.py  inventory.py  playbook.py
lib/distronode/compat/: __init__.py  selectors.py
lib/distronode/config/: base.yml  distronode_builtin_runtime.yml  manager.py
lib/distronode/executor/: action_write_locks.py  module_common.py  task_executor.py
lib/distronode/galaxy/: __init__.py  api.py  role.py  token.py
lib/distronode/module_utils/: _text.py  api.py  basic.py  pycompat24.py  urls.py
lib/distronode/modules/: assemble.py  async_wrapper.py  command.py  find.py  get_url.py  ping.py  set_fact.py  setup.py  systemd_service.py  sysvinit.py  unarchive.py  uri.py  user.py
lib/distronode/parsing/: __init__.py  mod_args.py  quoting.py  splitter.py
packaging/: release.py
packaging/cli-doc/: man.j2
test/units/: test_context.py
test/units/cli/: test_doc.py  (+1 more)
(+174 files in other folders)
