# Minimum target setuptools 66.1.0

[metadata]
name = distronode-core
version = attr: distronode.release.__version__
description = Radically simple IT automation
long_description = file: README.md
long_description_content_type = text/markdown
author = KhulnaSoft, Ltd.
author_email = info@khulnasoft.com
url = https://distronode.khulnasoft.com/
project_urls =
    Bug Tracker=https://github.com/distronode/distronode/issues
    CI: Azure Pipelines=https://dev.azure.com/distronode/distronode/
    Code of Conduct=https://distronode.khulnasoft.com/docs/distronode/latest/community/code_of_conduct.html
    Documentation=https://distronode.khulnasoft.com/docs/distronode-core/
    Mailing lists=https://distronode.khulnasoft.com/docs/distronode/latest/community/communication.html#mailing-list-information
    Source Code=https://github.com/distronode/distronode
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.10
# keep distronode-test as a verbatim script to work with editable installs, since it needs to do its
# own package redirection magic that's beyond the scope of the normal `distronode` path redirection
# done by setuptools `develop`
scripts =
    bin/distronode-test

[options.package_data]
distronode =
    config/*.yml
    executor/powershell/*.ps1
    galaxy/data/*.yml
    galaxy/data/*/*.j2
    galaxy/data/*/*.md
    galaxy/data/*/*/*.cfg
    galaxy/data/*/*/*.j2
    galaxy/data/*/*/*.md
    galaxy/data/*/*/*/*.j2
    galaxy/data/*/*/*/*.yml
    galaxy/data/*/*/*/.git_keep
    galaxy/data/*/*/*/inventory
    galaxy/data/*/*/.git_keep
    galaxy/data/*/*/inventory
    keyword_desc.yml
    module_utils/csharp/*.cs
    module_utils/powershell/*.psm1
    plugins/*/*.yml
distronode_test =
    _data/*/*.in
    _data/*/*.ps1
    _data/*/*.txt
    _data/*/*.yml
    _data/*/*/*.ini
    _data/distronode.cfg
    _data/coveragerc
    _util/*/*/*.ps1
    _util/*/*/*.py
    _util/*/*/*.sh
    _util/*/*/*/*.ini
    _util/*/*/*/*.json
    _util/*/*/*/*.ps1
    _util/*/*/*/*.psd1
    _util/*/*/*/*.py
    _util/*/*/*/*.txt
    _util/*/*/*/*/*.cfg
    _util/*/*/*/*/*.ps1
    _util/*/*/*/*/*.py
    _util/*/*/*/*/*.yml
    config/*.template
    config/*.yml

# setuptools 51.0.0
# [options.entry_points]
# console_scripts =
#     distronode = distronode.cli.adhoc:main
#     distronode-config = distronode.cli.config:main
#     distronode-console = distronode.cli.console:main
#     distronode-doc = distronode.cli.doc:main
#     distronode-galaxy = distronode.cli.galaxy:main
#     distronode-inventory = distronode.cli.inventory:main
#     distronode-playbook = distronode.cli.playbook:main
#     distronode-pull = distronode.cli.pull:main
#     distronode-vault = distronode.cli.vault:main
#     distronode-connection = distronode.cli.scripts.distronode_connection_cli_stub:main
#     distronode-test = distronode_test._util.target.cli.distronode_test_cli_stub:main

[flake8]
max-line-length = 160
